For Admin view, added func "create a new user", "view all users". Finished related documentation files.
