# api.yaml
@@ -8,6 +8,8 @@ servers:
 tags:
   - name: "Admin shipment"
     description: "For admin view, management shipments"
+  - name: "Admin user"
+    description: "For admin view, management users"
 paths:
   /admin/shipments:
     get:
@@ -116,6 +118,40 @@ paths:
           description: "A new shipment is not created successfully"
         "500":
           description: "Internal server error"
+  /admin/users:
+    get:
+      tags:
+        - "Admin user"
+      summary: "Return a list of users"
+      responses:
+        "200":
+          description: "A list of users is found"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/user"
+        "404":
+          description: "None of user is found"
+        "500":
+          description: "Internal server error"
+  /admin/user:
+    post:
+      tags:
+        - "Admin user"
+      summary: "Add a new user"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/user"
+      responses:
+        "201":
+          description: "A new user is created successfully"
+        "404":
+          description: "A new user is not created successfully"
+        "500":
+          description: "Internal server error"
 
 components:
   schemas:
@@ -145,5 +181,21 @@ components:
         Date:
           type: "string"
           format: "varchar16"
+    user:
+      type: "object"
+      required:
+        - "id"
+        - "WeChatID"
+      properties:
+        id:
+          type: "integer"
+          format: "int6"
+        WeChatID:
+          type: "integer"
+          format: "int6"
+        WeChatName:
+          type: "string"
+          format: "varchar255"
+
 
 
